# cdp-summarize

./: .pre-commit-config.yaml  LICENSE.txt  Pipfile  README.md  cdp.py  example-summary.json  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: boston-319e357ca015.json  milwaukee-1c696af4b860.json  oakland-d2305d5903fc.json  seattle-bc316138545b.json
notebooks/: scrap.ipynb
summarize/: __init__.py  cache.py  connection.py  extract.py  llm.py  mime.py  prompts.json  prompts.py  queries.py  summaries.py  summarizer.py  test_mime.py
