# Project basic info
[project]
name = "cdp-summarize"
version = "0.1.0"
authors = [{ name = "Dave Peck", email = "<dave@frontseat.org>" }]
readme = "README.md"
requires-python = ">=3.11.0"
license = { file = "LICENSE.txt" }

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = [
  "E",    # style errors
  "F",    # flakes
  "D",    # pydocstyle
  "I001", # isort
  "UP",   # pyupgrade
  "N",    # pep8-naming
  # "S",    # bandit
  "C",      # flake8-comprehensions
  "B",      # flake8-bugbear
  "A001",   # flake8-builtins
  "RUF",    # ruff-specific rules
  "RUF100", # Unused noqa directive
]
ignore = [
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D103", # Missing docstring in public function
  "D107", # Missing docstring in __init__
  "D203", # 1 blank line required before class docstring
  "D205", # 1 blank line required between summary line and description
  "D212", # Multi-line docstring summary should start at the first line
  "D213", # Multi-line docstring summary should start at the second line
  "D413", # Missing blank line after last section
  "D416", # Section name should end with a colon
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true
